--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
   /* ### Secondary */
   --Pale-Blue: hsl(223, 100%, 88%);
+  --Light-Pale-Blue: hsla(223, 100%, 88%, 0.5);
   --Light-Red: hsl(354, 100%, 66%);
 
   /* ### Neutral */
@@ -24,7 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 5vw;
+  padding: 3vh 5vw;
   width: 100vw;
   min-height: 100vh;
   margin: 0;
@@ -94,8 +95,41 @@ button {
 }
 
 .dashboard {
-  width: 100%;
+  width: 90%;
 }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 2vh;
+}
+
+.social-logos {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.social-logos .btn {
+  border-radius: 50%;
+  padding: 0.25rem;
+  width: 8.5vw;
+  height: 8.5vw;
+  background-color: #ffffff;
+  color: var(--Blue);
+  box-shadow: none;
+  border: solid 1px var(--Light-Pale-Blue);
+}
+
+.copyright {
+  color: var(--Gray);
+  font-size: 12px;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
